--- a/help-widget-styles.css
+++ b/help-widget-styles.css
@@ -3,7 +3,7 @@
 .faq {
   margin: 0;
   padding: 0;
-  font: 24px/1.5 "Open Sans", Tahoma, Geneva, Arial, sans-serif;
+  font: 18px/1.5 "Open Sans", Tahoma, Geneva, Arial, sans-serif;
   color: #444;
 }
 
@@ -13,18 +13,17 @@
   font-weight: normal;
   position: relative;
   padding: 0.5em 1em;
-  padding-left: 3.5em;
-  min-height: 60px;
+  padding-left: 4em;
+  min-height: 5em;
 }
 
 .faq dt:before, .faq dd:before {
   content: "Q";
-  font: 72px/1 "Goudy Old Style", "Book Antiqua", "Palatino", serif;
+  font: 60px/1 "Goudy Old Style", "Book Antiqua", "Palatino", serif;
   color: #e9e9e9; 
   position: absolute;
   left: 0.2em;
   top: 0;
-  z-index: -1;
   top: 50%;
   transform: translateY(-50%);
 }
@@ -32,11 +31,10 @@
 .faq dd:before {
   content: "A";
   color: white;
-  z-index: 0;
 }
 
 .faq dt {
-  margin: 10px 0;
+  margin: 1em 0 0.5em;
   padding-top: 1.5em;
 }
 
@@ -48,7 +46,3 @@
   padding-bottom: 1.5em;
 }
 
-.faq dd + dt {
-  margin-top: 0;
-/*   border-top: 1px solid #e9e9e9; */
-}
