--- a/help-widget-styles.css
+++ b/help-widget-styles.css
@@ -3,14 +3,13 @@
 .faq {
   margin: 0;
   padding: 0;
-  font: 18px/1.5 "Open Sans", Tahoma, Geneva, Arial, sans-serif;
   color: #444;
 }
 
 .faq dt, .faq dd {
   margin: 0;
   padding: 0;
-  font-weight: normal;
+  font: normal normal 18px/1.5 "Open Sans", Tahoma, Geneva, Arial, sans-serif;
   position: relative;
   padding: 0.5em 1em;
   padding-left: 4em;
@@ -36,6 +35,10 @@
 .faq dt {
   margin: 1em 0 0.5em;
   padding-top: 1.5em;
+}
+
+.faq dt:first-child {
+  margin-top: 0;
 }
 
 .faq dd {
