--- a/help-widget-styles.css
+++ b/help-widget-styles.css
@@ -7,32 +7,19 @@
 }
 
 .faq dt, .faq dd {
-  font: normal normal 18px/1.5 "Open Sans", Tahoma, Geneva, Arial, sans-serif;
+  font: normal normal 24px/1.5 "Open Sans", Tahoma, Geneva, Arial, sans-serif;
   margin: 0;
-  min-height: 5em;
-  padding: 0.5em 1em;
-  padding-left: 4em;
-  position: relative;
-}
-
-.faq dt:before, .faq dd:before {
-  color: #e9e9e9; 
-  content: "Q";
-  font: 60px/1 "Goudy Old Style", "Book Antiqua", "Palatino", serif;
-  left: 0.2em;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.faq dd:before {
-  color: white;
-  content: "A";
 }
 
 .faq dt {
-  margin: 1em 0 0.5em;
-  padding-top: 1.5em;
+  cursor: pointer;
+  outline: none;
+  margin: 0.5em 0;
+}
+
+.faq dt:hover,
+.faq dt.expanded {
+  color: #602d6c;
 }
 
 .faq dt:first-child {
@@ -40,9 +27,14 @@
 }
 
 .faq dd {
-/*   background-color: #AD9FB1; */
-/*   background-color: #856E8F; */
-  background-color: #eee;
-  box-shadow: 0 -10px 15px #eee;
-  padding-bottom: 1.5em;
+  overflow: hidden;
+  transition: height 0.25s;
+  font-size: 18px;
+  border-left: 4px solid #ddd;
+  padding-left: 0.5em;
+  height: 0;
+}
+
+.faq dt.expanded + dd {
+  height: 150px;
 }
